--- a/index.html
+++ b/index.html
@@ -11,6 +11,45 @@
   </head>
   <body>
 
+    <div class="container p-t-2">
+
+      <!-- ABOUT  -->
+      <div class="row">
+        <div class="col-sm-4">
+          <h3 class="m-b-2">About Full Stack Conf</h3>
+          <img class="m-b-1 img-fluid img-rounded" src="img/pdx.jpg" alt="Portland" />
+          <p>The beautiful city of Portland, Oregon will be the host city for Full Stack Conf!</p>
+          <p>Explore the future of JavaScript with a lineup of industry professionals. Discover new techniques to advance your career as a web developer.</p>
+        </div>
+        <div class="col-sm-4">
+          <h3 class="m-b-2">Expert Speakers</h3>
+          <p>Our expert speaker lineup was just announced, so don't wait too long before grabbing your tickets!</p>
+          <p>Want to meet the international JavaScript community and share skills with some of the world's top experts, hackers, and makers? Be the first to know what to expect for the future of JavaScript.</p>
+          <p>Full Stack Conf is committed to being inclusive and welcoming for everyone. We look forward to another intensive day of learning and sharing.</p>
+        </div>
+        <div class="col-sm-4">
+          <h3 class="m-b-2">What You'll Learn</h3>
+          <ul>
+            <li><strong>MongoDB</strong>: NoSQL database</li>
+            <li><strong>Angular</strong>: JavaScript framework</li>
+            <li><strong>Express</strong>: Framework for Node</li>
+            <li><strong>Node.js</strong>: JavaScript environment</li>
+            <li><strong>ES2015</strong>: Latest version of JavaScript</li>
+            <li><strong>Babel</strong>: JavaScript compiler</li>
+          </ul>
+        </div>
+      </div> <!-- ABOUT -->
+
+      <!-- SPEAKERS -->
+      <h1 class="display-4">Speakers</h1>
+      [Speakers bios go here]
+
+      <!--  SCHEDULE -->
+      <h1 class="display-4">Schedule</h1>
+      [Schedule goes here]
+
+    </div>  <!-- CONTAINER -->
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
