--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -7,8 +8,8 @@
     <title>Iron Yard</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css"
           integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
-
   </head>
+
   <body>
 
     <!-- NAVBAR -->
@@ -68,21 +69,80 @@
         </div>
         <div class="col-md-4">
           <h3 class="m-b-2">What You'll Learn</h3>
-          <ul>
-            <li><strong>MongoDB</strong>: NoSQL database</li>
-            <li><strong>Angular</strong>: JavaScript framework</li>
-            <li><strong>Express</strong>: Framework for Node</li>
-            <li><strong>Node.js</strong>: JavaScript environment</li>
-            <li><strong>ES2015</strong>: Latest version of JavaScript</li>
-            <li><strong>Babel</strong>: JavaScript compiler</li>
-          </ul>
+          <div class="list-group">
+            <a href="#" class="list-group-item"><strong>MongoDB</strong>: NoSQL database</a>
+            <a href="#" class="list-group-item"><strong>Angular</strong>: JavaScript framework </a>
+            <a href="#" class="list-group-item"><strong>Express</strong>: Framework for Node</a>
+            <a href="#" class="list-group-item"><strong>Node.js</strong>: JavaScript environment</a>
+            <a href="#" class="list-group-item"><strong>ES2015</strong>: Latest version of JavaScript</a>
+            <a href="#" class="list-group-item"><strong>Babel</strong>: JavaScript compiler</a>
+          </div>
         </div>
       </div> <!-- ABOUT -->
 
 
       <!-- SPEAKERS -->
       <h1 id="speakers" class="display-4 text-xs-center m-y-3 text-muted">Speakers</h1>
-      [Speakers bios go here]
+      <div class="row">
+        <div class="col-md-6">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="img/angie.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Angie McAngular</h4>
+              <p class="card-text">Angie is a web developer and a teacher who is passionate about building scalabale, data-driven web apps, especially ones that address old problems with new tech.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="img/nodestradamus.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">NodeStradamus</h4>
+              <p class="card-text">"NodeStra" is a software engineer and philosopher trying to leave the world better than he found it. He codes for non-profits, eCommerce, and large-scale web apps.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="img/geo.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Geo "Lo" Cation</h4>
+              <p class="card-text">Geo is a JavaScript developer working on large-scale applications. He's also a teacher who strives to support students in removing all barriers to learning code.</p>            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="img/ecma.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Ecma Scriptnstuff</h4>
+              <p class="card-text">Ecma found her passion for computers and programming over 15 years ago. She is excited to introduce people to the wonderful world of JavaScript.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="img/jay.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Jay Query</h4>
+              <p class="card-text">Jay is a developer, author of CSS: The Missing Manual, JavaScript &amp; jQuery: The Missing Manual, and web development teacher.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="img/json.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Json Babel</h4>
+              <p class="card-text">All of his professional life, Json has worked with computers online; he is a polyglot programmer and likes using the right tools for the job.</p>
+            </div>
+          </div>
+        </div>
+      </div><!-- /speakers -->
 
 
       <!--  SCHEDULE -->
