Switched schedule table spans from labels to tags to account for Bv4 changes

--- a/index.html
+++ b/index.html
@@ -147,7 +147,34 @@
 
       <!--  SCHEDULE -->
       <h1 class="display-4 text-xs-center m-y-3 text-muted">Schedule</h1>
-      [Schedule goes here]
+
+      <ul class="list=group">
+        <li class="list-group-item">
+          <h4 class="list-group-item-heading">Keynote: Internet Of Things<span class="tag tag-info tag-pill pull-xs-right">1:00pm</span></h4>
+          NodeStradamus
+        </li>
+        <li class="list-group-item">
+          <h4 class="list-group-item-heading">Angular Basics <span class="tag tag-info tag-pill pull-xs-right">2:00pm</span></h4>
+          Angie McAngular
+        </li>
+        <li class="list-group-item">
+          <h4 class="list-group-item-heading">Hey Nongo!<span class="tag tag-info tag-pill pull-xs-right">3:00pm</span></h4>
+          Jay Query
+        </li>
+        <li class="list-group-item">
+          <h4 class="list-group-item-heading">Introducing ES2015 <span class="tag tag-info tag-pill pull-xs-right">1:00pm</span></h4>
+          Ecma Scriptnstuff
+        </li>
+        <li class="list-group-item">
+          <h4 class="list-group-item-heading">Gettin' MEAN <span class="tag tag-info tag-pill pull-xs-right">2:00pm</span></h4>
+          Geo "Lo" Cation
+        </li>
+        <li class="list-group-item">
+          <h4 class="list-group-item-heading">What's Babel? <span class="tag tag-info tag-pill pull-xs-right">3:00pm</span></h4>
+          Json Babel
+        </li>
+
+      </ul>
 
 
       <!-- CALLOUT BUTTON -->
