--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <!-- FORM MODAL -->
 
     <div id="register" class="modal fade">
-      <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -248,11 +248,31 @@
             <h4 class="modal-title">Register now!</h4>
           </div>
           <div class="modal-body">
-            <p>One fine body&hellip;</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <!--  REGISTRATION FORM -->
+
+            <form>
+              <h5 class="m-b-2">Basic Info</h5>
+              <fieldset class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" class="form-control" id="name">
+              </fieldset>
+              <fieldset class="form-group">
+                <label for="mail">Email:</label>
+                <input type="email" class="form-control" id="email">
+              </fieldset>
+              <fieldset class="form-group">
+                <label for="role">Job Role:</label>
+                <select class="form-control" id="role" name="user_role">
+                  <option value="full stack js developer">Full Stack JavaScript Developer</option>
+                  <option value="front end developer">Front End Developer</option>
+                  <option value="back end developer">Back End Developer</option>
+                  <option value="designer">Designer</option>
+                  <option value="student">Student</option>
+                </select>
+              </fieldset>
+            </form>
+
+            <!--  /REGISTRATION FORM -->
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
