--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Iron Yard</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css"
           integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/custom.css">
+    <link rel="stylesheet" href="css/custom.css">
   </head>
 
   <body id="home" data-spy="scroll" data-target=".navbar" data-offset="200">
@@ -24,7 +24,7 @@
             <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#speakers">Speakers</a>
+            <a class="nav-link" href="#speakers">Courses</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#schedule">Schedule</a>
@@ -44,7 +44,7 @@
 
         <div class="btn-group m-t-2" role="group" aria-label="Basic example">
           <button type="button" class="btn btn-primary btn-lg"  data-toggle="modal" data-target="#register">Register Now</button>
-          <a class="btn btn-secondary btn-lg" href="#speakers">See Speakers</a>
+          <a class="btn btn-secondary btn-lg" href="#speakers">See Courses</a>
         </div>
 
       </div>
@@ -57,7 +57,7 @@
       <!-- ABOUT  -->
       <div id="about" class="row">
         <div class="col-md-4 col-lg-push-4">
-          <h3 class="m-b-2">About Full Stack Conf</h3>
+          <h3 class="m-b-2">About Iron Yard</h3>
           <img class="m-b-1 img-fluid img-rounded hidden-xs-down" src="img/pdx.jpg" alt="Portland" />
           <p>The beautiful city of Portland, Oregon will be the host city for Full Stack Conf!</p>
           <p>Explore the future of JavaScript with a lineup of industry professionals. Discover new techniques to advance your career as a web developer.</p>
