--- a/index.html
+++ b/index.html
@@ -59,37 +59,35 @@
         <div class="col-md-4 col-lg-push-4">
           <h3 class="m-b-2">About Iron Yard</h3>
           <img class="m-b-1 img-fluid img-rounded hidden-xs-down" src="img/pdx.jpg" alt="Portland" />
-          <p>The beautiful city of Portland, Oregon will be the host city for Full Stack Conf!</p>
-          <p>Explore the future of JavaScript with a lineup of industry professionals. Discover new techniques to advance your career as a web developer.</p>
+          <p>The Iron Yard exists to create real, lasting change for people, companies and communities through technology education.</p>
         </div>
         <div class="col-md-4 col-lg-pull-4">
-          <h3 class="m-b-2">Expert Speakers</h3>
-          <p>Our expert speaker lineup was just announced, so don't wait too long before grabbing your tickets!</p>
-          <p>Want to meet the international JavaScript community and share skills with some of the world's top experts, hackers, and makers? Be the first to know what to expect for the future of JavaScript.</p>
-          <p>Full Stack Conf is committed to being inclusive and welcoming for everyone. We look forward to another intensive day of learning and sharing.</p>
+          <h3 class="m-b-2">Our Mission</h3>
+          <p>Our mission is to connect with people pursuing the craft and lifelong adventure of technology and help equip them with the skills they need to both get started and progress throughout their careers.</p>
+          <p>Our hope is that those we journey with are energized to make a difference through their work. We believe that passionate, talented people who love what they do will create and sustain great families, jobs, companies and solutions to the world’s problems.</p>
         </div>
         <div class="col-md-4">
           <h3 class="m-b-2">What You'll Learn</h3>
           <div class="list-group">
-            <a href="#" class="list-group-item"><strong>MongoDB</strong>: NoSQL database</a>
-            <a href="#" class="list-group-item"><strong>Angular</strong>: JavaScript framework </a>
-            <a href="#" class="list-group-item"><strong>Express</strong>: Framework for Node</a>
-            <a href="#" class="list-group-item"><strong>Node.js</strong>: JavaScript environment</a>
-            <a href="#" class="list-group-item"><strong>ES2015</strong>: Latest version of JavaScript</a>
-            <a href="#" class="list-group-item"><strong>Babel</strong>: JavaScript compiler</a>
+            <a href="#" class="list-group-item"><strong>OOP</strong>: Object-Oriented Programming</a>
+            <a href="#" class="list-group-item"><strong>Version Control</strong>: Git</a>
+            <a href="#" class="list-group-item"><strong>Databases</strong>: MySQL & PostgreSQL</a>
+            <a href="#" class="list-group-item"><strong>Testing</strong>: TTD & Selenium</a>
+            <a href="#" class="list-group-item"><strong>Logic</strong>: Mastering Control Flow</a>
+            <a href="#" class="list-group-item"><strong>Collaboration</strong>: Staying AGILE</a>
           </div>
         </div>
       </div> <!-- ABOUT -->
 
 
       <!-- SPEAKERS -->
-      <h1 id="speakers" class="display-4 text-xs-center m-y-3 text-muted">Speakers</h1>
+      <h1 id="speakers" class="display-4 text-xs-center m-y-3 text-muted">Courses</h1>
       <div class="row">
         <div class="col-md-6">
           <div class="card">
-            <img class="card-img-top img-fluid" src="img/angie.png" alt="Card image cap">
+            <img class="card-img-top img-fluid" src="img/javascript.png" alt="Card image cap">
             <div class="card-block">
-              <h4 class="card-title">Angie McAngular</h4>
+              <h4 class="card-title">Front-End With JavaScript</h4>
               <p class="card-text">Angie is a web developer and a teacher who is passionate about building scalabale, data-driven web apps, especially ones that address old problems with new tech.</p>
             </div>
           </div>
@@ -97,9 +95,9 @@
 
         <div class="col-md-6">
           <div class="card">
-            <img class="card-img-top img-fluid" src="img/nodestradamus.png" alt="Card image cap">
+            <img class="card-img-top img-fluid" src="img/python.png" alt="Card image cap">
             <div class="card-block">
-              <h4 class="card-title">NodeStradamus</h4>
+              <h4 class="card-title">Back-End With Python</h4>
               <p class="card-text">"NodeStra" is a software engineer and philosopher trying to leave the world better than he found it. He codes for non-profits, eCommerce, and large-scale web apps.</p>
             </div>
           </div>
@@ -107,39 +105,19 @@
 
         <div class="col-md-6">
           <div class="card">
-            <img class="card-img-top img-fluid" src="img/geo.png" alt="Card image cap">
+            <img class="card-img-top img-fluid" src="img/ruby.jpg" alt="Card image cap">
             <div class="card-block">
-              <h4 class="card-title">Geo "Lo" Cation</h4>
+              <h4 class="card-title">Back-End With Ruby</h4>
               <p class="card-text">Geo is a JavaScript developer working on large-scale applications. He's also a teacher who strives to support students in removing all barriers to learning code.</p>            </div>
           </div>
         </div>
 
         <div class="col-md-6">
           <div class="card">
-            <img class="card-img-top img-fluid" src="img/ecma.png" alt="Card image cap">
+            <img class="card-img-top img-fluid" src="img/swift.png" alt="Card image cap">
             <div class="card-block">
-              <h4 class="card-title">Ecma Scriptnstuff</h4>
+              <h4 class="card-title">Mobile iOS with Swift</h4>
               <p class="card-text">Ecma found her passion for computers and programming over 15 years ago. She is excited to introduce people to the wonderful world of JavaScript.</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-6">
-          <div class="card">
-            <img class="card-img-top img-fluid" src="img/jay.png" alt="Card image cap">
-            <div class="card-block">
-              <h4 class="card-title">Jay Query</h4>
-              <p class="card-text">Jay is a developer, author of CSS: The Missing Manual, JavaScript &amp; jQuery: The Missing Manual, and web development teacher.</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-6">
-          <div class="card">
-            <img class="card-img-top img-fluid" src="img/json.png" alt="Card image cap">
-            <div class="card-block">
-              <h4 class="card-title">Json Babel</h4>
-              <p class="card-text">All of his professional life, Json has worked with computers online; he is a polyglot programmer and likes using the right tools for the job.</p>
             </div>
           </div>
         </div>
@@ -147,50 +125,45 @@
 
 
       <!--  SCHEDULE -->
-      <h1 id="speakers" class="display-4 text-xs-center m-y-3 text-muted">Schedule</h1>
+      <h1 id="schedule" class="display-4 text-xs-center m-y-3 text-muted">Academic Schedule</h1>
 
       <ul class="list-group">
         <li class="list-group-item list-group-item-success">
-          <h4 class="list-group-item-heading">Keynote: Internet Of Things<span class="tag tag-info tag-pill pull-xs-right">1:00pm</span></h4>
-          NodeStradamus
+          <h4 class="list-group-item-heading">IY Conference<span class="tag tag-info tag-pill pull-xs-right">March 2016</span></h4>
+          Austin, Texas - General info about Iron Yard and its mission.
         </li>
         <li class="list-group-item">
-          <h4 class="list-group-item-heading">Angular Basics <span class="tag tag-info tag-pill pull-xs-right">2:00pm</span></h4>
-          Angie McAngular
+          <h4 class="list-group-item-heading">Front-End with JavaScript <span class="tag tag-info tag-pill pull-xs-right">April 2016</span></h4>
+          Durham, NC
         </li>
         <li class="list-group-item">
-          <h4 class="list-group-item-heading">Hey Nongo!<span class="tag tag-info tag-pill pull-xs-right">3:00pm</span></h4>
-          Jay Query
+          <h4 class="list-group-item-heading">Back-End With Python<span class="tag tag-info tag-pill pull-xs-right">May 2016</span></h4>
+          Raleigh, NC
         </li>
         <li class="list-group-item">
-          <h4 class="list-group-item-heading">Introducing ES2015 <span class="tag tag-info tag-pill pull-xs-right">1:00pm</span></h4>
-          Ecma Scriptnstuff
+          <h4 class="list-group-item-heading">Back-End With Ruby<span class="tag tag-info tag-pill pull-xs-right">June 2016</span></h4>
+          San Diego, CA
         </li>
         <li class="list-group-item">
-          <h4 class="list-group-item-heading">Gettin' MEAN <span class="tag tag-info tag-pill pull-xs-right">2:00pm</span></h4>
-          Geo "Lo" Cation
+          <h4 class="list-group-item-heading">Mobile iOS with Swift <span class="tag tag-info tag-pill pull-xs-right">July 2016</span></h4>
+          Seattle, WA
         </li>
-        <li class="list-group-item">
-          <h4 class="list-group-item-heading">What's Babel? <span class="label label-info label-pill pull-xs-right">3:00pm</span></h4>
-          Json Babel
-        </li>
-
       </ul>
 
 
       <!-- CALLOUT BUTTON -->
-      <button type="button"  data-toggle="modal" data-target="#register" class="btn btn-outline-info btn-lg d-block m-x-auto m-y-3">Don't miss out, register now!</button>
+      <button type="button"  data-toggle="modal" data-target="#register" class="btn btn-outline-info btn-lg d-block m-x-auto m-y-3">Don't miss out, enroll today!</button>
 
 
       <!-- SIGNUP FORM -->
       <hr>
       <div class="row p-y-2 text-muted">
         <div class="col-md-6 col-xl-5">
-          <p><strong>About Treehouse</strong></p>
-          <p>Treehouse brings affordable technology education to people everywhere to help them achieve their dreams and change the world.</p>
+          <p><strong>Hey, you, reader!</strong></p>
+          <p>In case it's not entirely apparent, this is a fictional site I created to practice some front-end (mostly Bootstrap and JavaScript). If you're interested in accurate, actionable info on Iron Yard, please check out their <i>actual</i> <a href="http://theironyard.com">website!</a></p>
         </div>
         <div class="col-md-6 col-xl-5 col-xl-offset-2">
-          <p><strong>Stay up-to-date on Full Stack Conf</strong></p>
+          <p><strong>Stay up-to-date on all things Iron Yard</strong></p>
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Email">
             <span class="input-group-btn">
@@ -214,15 +187,15 @@
             </li>
             <li class="nav-item">
               <div class="btn-group dropup">
-                <button type="button" class="btn btn-secondary">Other Confs</button>
+                <button type="button" class="btn btn-secondary">Courses</button>
                 <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <span class="sr-only">Toggle Dropdown</span>
                 </button>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">CSS</a>
-                  <a class="dropdown-item" href="#">Python</a>
-                  <a class="dropdown-item" href="#">Java</a>
-                  <a class="dropdown-item" href="#">Swift</a>
+                  <a class="dropdown-item" href="#schedule">Front-End with JavaScript</a>
+                  <a class="dropdown-item" href="#schedule">Back-End with Python</a>
+                  <a class="dropdown-item" href="#schedule">Back-End with Python</a>
+                  <a class="dropdown-item" href="#schedule">Mobile iOS with Swift</a>
                 </div>
               </div>
             </li>
@@ -246,7 +219,7 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
-            <h4 class="modal-title">Register now!</h4>
+            <h4 class="modal-title">Enroll now!</h4>
           </div>
           <div class="modal-body">
             <!--  REGISTRATION FORM -->
@@ -254,7 +227,7 @@
               <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
-              <strong>Hurry!</strong> You should check in on some of those fields below.
+              <strong>Hurry!</strong> Program acceptance is first-come, first-serve.
             </div>
 
             <form>
@@ -268,43 +241,42 @@
                 <input type="email" class="form-control form-control-danger" id="email">
               </fieldset>
               <fieldset class="form-group">
-                <label for="role">Job Role:</label>
+                <label for="role">Class:</label>
                 <select class="c-select form-control" id="role" name="user_role">
-                  <option value="full stack js developer">Full Stack JavaScript Developer</option>
-                  <option value="front end developer">Front End Developer</option>
-                  <option value="back end developer">Back End Developer</option>
-                  <option value="designer">Designer</option>
-                  <option value="student">Student</option>
+                  <option value="full stack js developer">Front-End | Javascript</option>
+                  <option value="front end developer">Back-End | Python</option>
+                  <option value="back end developer">Back-End | Ruby</option>
+                  <option value="designer">Mobile iOS | Swift</option>
                 </select>
               </fieldset>
               <hr class="m-y-2">
-              <h5 class="m-b-2">Which topics interest you most?</h5>
+              <h5 class="m-b-2">Which languages interest you most?</h5>
 
               <div class="form-group custom-controls-stacked">
                 <label class="custom-control custom-checkbox">
                   <input type="checkbox" class="custom-control-input">
                   <span class="custom-control-indicator"></span>
-                  <span class="custom-control-description">JavaScript Frameworks</span>
+                  <span class="custom-control-description">JavaScript</span>
                 </label>
                 <label class="custom-control custom-checkbox">
                   <input type="checkbox" class="custom-control-input">
                   <span class="custom-control-indicator"></span>
-                  <span class="custom-control-description">JavaScript Libraries</span>
+                  <span class="custom-control-description">Ruby</span>
                 </label>
                 <label class="custom-control custom-checkbox">
                   <input type="checkbox" class="custom-control-input">
                   <span class="custom-control-indicator"></span>
-                  <span class="custom-control-description">Node.js</span>
+                  <span class="custom-control-description">Python</span>
                 </label>
                 <label class="custom-control custom-checkbox">
                   <input type="checkbox" class="custom-control-input">
                   <span class="custom-control-indicator"></span>
-                  <span class="custom-control-description">Build Tools</span>
+                  <span class="custom-control-description">Java</span>
                 </label>
                 <label class="custom-control custom-checkbox">
                   <input type="checkbox" class="custom-control-input">
                   <span class="custom-control-indicator"></span>
-                  <span class="custom-control-description">ES2015</span>
+                  <span class="custom-control-description">Swift</span>
                 </label>
               </div>
 
