--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <img class="card-img-top img-fluid" src="img/javascript.png" alt="Card image cap">
             <div class="card-block">
               <h4 class="card-title">Front-End With JavaScript</h4>
-              <p class="card-text">Angie is a web developer and a teacher who is passionate about building scalabale, data-driven web apps, especially ones that address old problems with new tech.</p>
+              <p class="card-text">12-week full immersion course in the exciting and versatile language of JavaScript.</p>
             </div>
           </div>
         </div>
@@ -98,7 +98,7 @@
             <img class="card-img-top img-fluid" src="img/python.png" alt="Card image cap">
             <div class="card-block">
               <h4 class="card-title">Back-End With Python</h4>
-              <p class="card-text">"NodeStra" is a software engineer and philosopher trying to leave the world better than he found it. He codes for non-profits, eCommerce, and large-scale web apps.</p>
+              <p class="card-text">12-week full immersion course in the ubiquitous and powerful language of Python.</p>
             </div>
           </div>
         </div>
@@ -108,7 +108,8 @@
             <img class="card-img-top img-fluid" src="img/ruby.jpg" alt="Card image cap">
             <div class="card-block">
               <h4 class="card-title">Back-End With Ruby</h4>
-              <p class="card-text">Geo is a JavaScript developer working on large-scale applications. He's also a teacher who strives to support students in removing all barriers to learning code.</p>            </div>
+              <p class="card-text">12-week full immersion course in the dynamic and robust language of Ruby.</p>
+             </div>
           </div>
         </div>
 
@@ -117,7 +118,7 @@
             <img class="card-img-top img-fluid" src="img/swift.png" alt="Card image cap">
             <div class="card-block">
               <h4 class="card-title">Mobile iOS with Swift</h4>
-              <p class="card-text">Ecma found her passion for computers and programming over 15 years ago. She is excited to introduce people to the wonderful world of JavaScript.</p>
+              <p class="card-text">12-week full immersion course in the new and exciting language of Swift.</p>
             </div>
           </div>
         </div>
@@ -180,10 +181,10 @@
         <div class="col-md-7">
           <ul class="nav nav-inline">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Community</a>
+              <a class="nav-link active" href="#speakers">Courses</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Tracks</a>
+              <a class="nav-link" href="#schedule">Schedule</a>
             </li>
             <li class="nav-item">
               <div class="btn-group dropup">
@@ -194,7 +195,7 @@
                 <div class="dropdown-menu">
                   <a class="dropdown-item" href="#schedule">Front-End with JavaScript</a>
                   <a class="dropdown-item" href="#schedule">Back-End with Python</a>
-                  <a class="dropdown-item" href="#schedule">Back-End with Python</a>
+                  <a class="dropdown-item" href="#schedule">Back-End with Ruby</a>
                   <a class="dropdown-item" href="#schedule">Mobile iOS with Swift</a>
                 </div>
               </div>
@@ -236,7 +237,7 @@
                 <label for="name">Name:</label>
                 <input type="text" class="form-control" id="name">
               </fieldset>
-              <fieldset class="form-group has-danger">
+              <fieldset class="form-group">
                 <label for="mail" class="form-control-label p-l-0">Email:</label>
                 <input type="email" class="form-control form-control-danger" id="email">
               </fieldset>
@@ -284,7 +285,7 @@
               <h5 class="m-b-2">Payment Info</h5>
 
               <div class="row">
-                <div class="col-lg-6 form-group has-success">
+                <div class="col-lg-6 form-group">
                   <label for="cc-num" class="form-control-label p-l-0">Card Number:</label>
                   <input class="form-control form-control-success" id="cc-num" type="text">
                 </div>
