--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div id="about" class="row">
         <div class="col-md-4 col-lg-push-4">
           <h3 class="m-b-2">About Iron Yard</h3>
-          <img class="m-b-1 img-fluid img-rounded hidden-xs-down" src="img/pdx.jpg" alt="Portland" />
+          <img class="m-b-1 img-fluid img-rounded hidden-xs-down" src="img/pdx.jpg" alt="IY" />
           <p>The Iron Yard exists to create real, lasting change for people, companies and communities through technology education.</p>
         </div>
         <div class="col-md-4 col-lg-pull-4">
